<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".weather.CitiesFragment">

    <ListView
        android:id="@+id/listView"
        android:layout_width="167dp"
        android:layout_height="580dp"
        android:layout_marginTop="8dp"
        android:entries="@array/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Select_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/city"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="264dp"
        android:layout_marginTop="214dp"
        android:layout_marginEnd="59dp"
        android:onClick="onClick"
        android:text="@string/How_to_choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:ignore="OnClick" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/MyButton"
            android:id="@+id/inputCity"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/cityName"
            android:inputType="textPersonName"
            android:text="@string/ufa" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>