<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/w_05"
    tools:context=".view.ui.BaseMainActivity">

    <FrameLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />


        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/inputCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.61"
                    android:gravity="center"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="18sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="150dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="140dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="130dp"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/coord"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="225dp"
            android:layout_marginTop="130dp"
            app:srcCompat="@drawable/w_03d" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="150dp"
            android:textSize="18sp" />


        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="180dp"
            android:text="@string/sunrise"
            android:textSize="18sp" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="315dp"
            android:layout_marginTop="180dp"
            android:text="@string/sunset"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="232dp"
            android:text="@string/wind"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="232dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ms"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="232dp"
            android:text="@string/metsec"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nameClouds"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="260dp"
            android:text="@string/clouds"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/xhcoord"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="262dp"
            app:srcCompat="@drawable/w_04d" />

        <TextView
            android:id="@+id/clouds"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="260dp"
            android:text=" "
            android:textSize="24sp" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="260dp"
            android:text="%"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/nameHumidity"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="295dp"
            android:text="@string/humidity"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/dcoord"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="300dp"
            app:srcCompat="@drawable/ic_humidity_dark" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="295dp"
            android:text=""
            android:textSize="24sp" />

        <TextView
            android:id="@+id/humidityPersent"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="295dp"
            android:text="%"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/namePressure"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="330dp"
            android:text="@string/pressure"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/hcoord"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="160dp"
            android:layout_marginTop="332dp"
            app:srcCompat="@drawable/ic_pressure_dark" />

        <TextView
            android:id="@+id/press"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="330dp"
            android:text=" "
            android:textSize="24sp" />

        <TextView
            android:id="@+id/pressPersent"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="336dp"
            android:text="@string/mmhg_art"
            android:textSize="18sp" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>